[workspace]
members = [
  "isok-api",
  "isok-proxy",
  "isok-data",
  "isok-agent",
  "isok-offloader",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.35.0", features = [
  "macros",
  "rt-multi-thread",
  "rt",
  "sync",
] }
log = "0.4.20"
env_logger = { version = "0.11.3", default-features = false, features = [
  "auto-color",
  "humantime",
] }
