[workspace]
members = [
  "isok-api",
  "isok-proxy",
  "isok-data",
  "isok-agent",
  "isok-offloader",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.35.0", features = [
  "macros",
  "rt-multi-thread",
  "rt",
  "sync",
] }
log = "0.4.20"
env_logger = { version = "0.11.3", default-features = false, features = [
  "auto-color",
  "humantime",
] }
uuid = "1.8.0"
axum = { version = "0.7.5", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "tokio",
  "tracing",
] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "chrono",
  "postgres",
  "uuid",
  "json",
  "macros",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
pulsar = { version = "6.3.0", default-features = false, features = [
  "tokio-runtime",
] }
reqwest = { version = "0.12.4", default-features = false, features = [
  "default-tls",
  "charset",
  "http2",
  "json"
] }
futures = "0.3.30"
http = "1.1.0"
