[package]
name = "isok-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = [
  "default-tls",
  "charset",
  "http2",
] }
pulsar = { version = "6.1.0", default-features = false, features = [
  "compression",
  "tokio-runtime",
] }
log = { workspace = true }
env_logger = { workspace = true }
isok-data = { path = "../isok-data" }
socket2 = "0.5.5"
nom = "7.1.3"
cookie-factory = "0.3.2"
uuid = "1.6.1"
poule = "0.3.2"
futures = "0.3.29"
slab = "0.4.9"
tokio-util = { version = "0.7.10", features = ["rt"] }
serde = { version = "1.0.195", features = ["derive"] }
