[package]
name = "isok-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
pulsar = { workspace = true, features = [
  "compression",
] }
log = { workspace = true }
env_logger = { workspace = true }
isok-data = { path = "../isok-data" }
socket2 = "0.5.5"
nom = "7.1.3"
cookie-factory = "0.3.2"
uuid = { workspace = true }
poule = "0.3.2"
futures = { workspace = true }
slab = "0.4.9"
tokio-util = { version = "0.7.10", features = ["rt"] }
serde = { workspace = true }
