[package]
name = "isok-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
uuid = { version = "1.6.1", features = ["v4"] }
axum = { version = "0.7.2", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "tokio",
  "tracing",
] }
env_logger = { workspace = true }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "chrono",
  "postgres",
  "uuid",
  "json",
  "macros",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
pulsar = { version = "6.1.0", default-features = false, features = [
  "compression",
  "tokio-runtime",
] }
isok-data = { path = "../isok-data" }
log = { workspace = true }
biscuit-auth = "4.0.0"
