[package]
name = "isok-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true }
env_logger = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
pulsar = { workspace = true, features = [
  "compression",
] }
isok-data = { path = "../isok-data" }
log = { workspace = true }
