[package]
name = "isok-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
http = { version = "1.0.0" }
uuid = { version = "1.6.1", features = ["serde"] }
pulsar = { version = "6.1.0", default-features = false, features = [
  "tokio-runtime",
] }
chrono = { workspace = true }
