[package]
name = "isok-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
pulsar = { workspace = true }
chrono = { workspace = true }
