[package]
name = "isok-offloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }
time = { version = "0.3.36", features = ["serde"] }
warp10 = { version = "2.0.0" }
futures = "0.3.29"
pulsar = "6.1.0"
isok-data = { path = "../isok-data" }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
uuid = { version = "1.6.1", features = ["v4"] }
