[package]
name = "isok-offloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
warp10 = { git = "https://github.com/isok-io/warp10.rs" }
futures = { workspace = true }
pulsar = { workspace = true, features = [
  "compression",
] }
isok-data = { path = "../isok-data" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
uuid = { workspace = true, features = ["v4"] }
