[package]
name = "isok-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { version = "0.7.2", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "tokio",
  "tracing",
] }
env_logger = { workspace = true }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "json",
  "uuid",
  "macros",
] }
uuid = { version = "1.6.1", features = ["v4"] }
argon2 = "0.5.2"
biscuit-auth = "4.0.0"
log = { workspace = true }
serde = { version = "1.0.193", features = ["derive"] }
toml = { version = "0.8.8", optional = true }
serde_json = "1.0.111"
http = "1.0.0"
isok-data = { path = "../isok-data" }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.29"
regex = "1.10.2"
clap = { version = "4.4.16", features = ["derive"], optional = true }

[features]
default = ["dep:clap", "dep:toml"]
env_config = []
