[package]
name = "isok-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
env_logger = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
argon2 = "0.5.2"
biscuit-auth = "4.1.1"
log = { workspace = true }
serde = { workspace = true }
toml = { version = "0.8.8", optional = true }
serde_json = { workspace = true }
http = { workspace = true }
isok-data = { path = "../isok-data" }
reqwest = { workspace = true }
futures = { workspace = true }
regex = "1.10.2"
clap = { version = "4.4.16", features = ["derive"], optional = true }

[features]
default = ["dep:clap", "dep:toml"]
env_config = []
