[package]
name = "ping-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = "0.11.22"
pulsar = "6.1.0"
log = "0.4.20"
env_logger = "0.10.1"
ping-data = { path = "../ping-data" }
socket2 = "0.5.5"
nom = "7.1.3"
cookie-factory = "0.3.2"
uuid = "1.6.1"
poule = "0.3.2"
futures = "0.3.29"
slab = "0.4.9"
tokio-util = { version = "0.7.10", features = ["rt"] }
