[package]
name = "ping-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt","full", "test-util"] }
reqwest = "0.12.3"
pulsar = "6.1.0"
log = "0.4.20"
env_logger = "0.11.3"
ping-data = { path = "../ping-data" }
socket2 = "0.5.5"
nom = "7.1.3"
cookie-factory = "0.3.2"
uuid = "1.6.1"
poule = "0.3.2"
futures = "0.3.29"
slab = "0.4.9"
tokio-util = { version = "0.7.10", features = ["rt"] }
warp10 = "2.0.0"
time = "0.3.30"
redis = {version="0.25.3", features = ["tokio-comp"]}
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.10" 
r2d2_redis = "0.14.0"
once_cell = "1.19.0"

[dev-dependencies]
testcontainers = "0.15.0"