[package]
name = "ping-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }
axum = "0.7.2"
env_logger = "0.10.1"
sqlx = "0.7.3"
pulsar = "6.1.0"
ping-data = { path = "../ping-data" }
