[package]
name = "ping-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }
uuid = { version = "1.6.1", features = ["v4"] }
axum = "0.7.2"
env_logger = "0.10.1"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "chrono",
  "postgres",
  "uuid",
  "json",
  "macros",
  "time",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
pulsar = "6.1.0"
ping-data = { path = "../ping-data" }
log = "0.4.20"
biscuit-auth = "4.0.0"
time = { version = "0.3.36", features = ["serde"] }
warp10 = { version = "2.0.0" }
futures = "0.3.29"
