[package]
name = "ping-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
http = "1.0.0"
uuid = { version = "1.6.1", features = ["serde"] }

