[package]
name = "ping-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
http = "1.0.0"
uuid = { version = "1.6.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
pulsar = "6.1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "chrono", "postgres", "uuid", "json", "macros", "time"] }
time = { version = "0.3.30", features = ["serde"] }

