[package]
name = "ping-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }
axum = "0.7.2"
env_logger = "0.10.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid", "macros"] }
uuid = { version = "1.6.1", features = ["v4"] }
argon2 = "0.5.2"
biscuit-auth = "4.0.0"
log = { version = "0.4.20", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
serde_json = "1.0.111"
http = "1.0.0"
ping-data = {path = "../ping-data"}
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.29"
regex = "1.10.2"
clap = { version = "4.4.16", features = ["derive"] }
